# EE5311group8

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  neural_network_20260304-044220.npz  neural_network_20260304-080410.npz  nn_policy.py  pid_20260304-044442.npz  pid_20260304-052425.npz  pid_20260304-071626.npz  pid_20260304-071736.npz  pid_20260304-071812.npz  pid_20260304-075325.npz  pid_20260304-075516.npz  pid_20260304-075632.npz  pid_20260304-075647.npz  pid_20260304-075709.npz  pid_20260304-075733.npz  pyproject.toml
Implementation/: Readme.md  hardware_driver.py  neural_network_20260304-044308.npz  nn_weights.npz  pid_20260304-045214.npz  pid_20260304-071701.npz  run_controller.py
data/neural/: policy.eqx
examples/: save_load_policy.ipynb
examples/cart_pole/: train_bptt.ipynb  train_ppo.ipynb
examples/quadrotor/: train_bptt_state.ipynb  train_bptt_vision.ipynb  train_ppo_state.ipynb
src/controllers/: neural.py  optimize_pid.py  optimize_pid_lbfgs.py  pid.py
src/flightning/: __init__.py
src/flightning/algos/: README.md  bptt.py  ppo.py
src/flightning/envs/: README.md  __init__.py  env_base.py  hovering_features_env.py  hovering_state_env.py  stabilising_cart_pole_env.py  wrappers.py
src/flightning/modules/: README.md  __init__.py  mlp.py
src/flightning/objects/: README.md  __init__.py  cart_pole_obj.py  quadrotor_obj.py  quadrotor_simple_obj.py  (+1 more)
src/pendulum/: env.py  physics.py  visualize.py
tests/: test_compare_optimizers.py  test_neural.py  test_optimize_pid.py  test_physics.py  test_pid.py  test_plot.py  test_ppo.py
(+11 files in other folders)
