[project]
name = "ca1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax[cuda13]>=0.9.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.15.0"]


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
