[project]
name = "pendulum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["jax>=0.9.0.1", "matplotlib>=3.10.8", "numpy>=2.4.2"]

[project.optional-dependencies]
cuda = ["jax[cuda13]>=0.9.0.1"]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.15.0"]


[tool.hatch.build.targets.wheel]
packages = ["src/pendulum", "src/controllers"]

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
